--- a/shopping-cart/src/Styles/FormsSection.css
+++ b/shopping-cart/src/Styles/FormsSection.css
@@ -65,12 +65,16 @@ form button {
   grid-column: 2;
 }
 
+.error_message {
+  color: red;
+}
+
 @media screen and (min-width: 1200px) {
 
-  .edit_form {
-    height: 60vh;
-    overflow-y: scroll;
-  }
+  /* .edit_form {
+    height: 55vh;
+    overflow-y: auto;
+  } */
 
   form {
     grid-template-columns: 1fr 1fr 1fr;
